--- a/admin/src/translations/en.json
+++ b/admin/src/translations/en.json
@@ -1,5 +1,5 @@
 {
-  "form.button.draft": "Open draft preview",
+  "form.button.draft": "Open preview",
   "form.button.published": "Open live view",
   "form.button.copy-link": "Copy link",
   "form.button.copy-link.draft": "Copy preview link",
