--- a/admin/src/translations/en.json
+++ b/admin/src/translations/en.json
@@ -1,7 +1,7 @@
 {
   "form.button.draft": "Open preview",
   "form.button.published": "Open live view",
-  "form.button.copy-link": "Copy link",
+  "form.button.copy-link": "Copy live link",
   "form.button.copy-link.draft": "Copy preview link",
   "notification.success.link-copied": "Link copied to the clipboard"
 }
